tests/invalid/test4_invalid.imagelang
{
  int x = 1;
  x = x + 1 $$  // $$ не распознается лексером, будет lexer error
}